Fix specialist dashboard spacing

--- a/app/assets/stylesheets/application/skill.scss
+++ b/app/assets/stylesheets/application/skill.scss
@@ -1,5 +1,6 @@
 .skill-tags {
   white-space: normal;
+  @include clearfix;
 
   .skill-tag {
     float: left;
